// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`callsCount должен вернуть callsCount, если есть данные про звонки и это сообщение еще не видел пользователь 1`] = `
Object {
  "data": Object {
    "count": 10,
    "request": "offer/calls-stats",
  },
  "seenKey": "callsCount_123-abc",
  "type": "callsCount",
}
`;

exports[`lastCall должен вернуть lastCall, если последний звонок был меньше 24 назад 1`] = `
Object {
  "data": Object {
    "lastCallSecondsLeft": 82800,
  },
  "seenKey": "lastCall_123-abc",
  "type": "lastCall",
}
`;

exports[`noCalls должен вернуть noCalls, если звонков меньше одного и это сообщение еще не видел пользователь 1`] = `
Object {
  "data": Object {
    "count": 0,
    "request": "offer/calls-stats",
  },
  "seenKey": "noCalls_123-abc",
  "type": "noCalls",
}
`;

exports[`views должен вернуть views, если показов больше 5 1`] = `
Object {
  "data": Object {
    "views": 6,
  },
  "seenKey": "views_123-abc",
  "type": "views",
}
`;

exports[`viewsOverall должен вернуть viewsOverall, если за последние 3 дня было больше 100 просмотров 1`] = `
Object {
  "data": Object {
    "days": 2,
    "views": 100,
  },
  "seenKey": "viewsOverall_123-abc",
  "type": "viewsOverall",
}
`;
